# speed_racer

./: .gitignore  CMakeLists.txt  QUICK_START.md  README.md  STRATEGY.md  TODO.md  compare_rl_curves.py  dev.sh  main.cpp  requirements-rl.txt  rl.sh  rl_double_dqn.sh  rl_dqn.sh
game/: game.cpp  game.hpp
gameplay/: car.cpp  car.hpp
rl/: __init__.py  dqn_agent.py  evaluate.py  train.py
rl/runs/: dqn_best.pt  dqn_ep_1000.pt  dqn_ep_1300.pt  dqn_ep_1400.pt  dqn_ep_150.pt  dqn_ep_1500.pt  dqn_ep_1700.pt  dqn_ep_1800.pt  dqn_ep_1900.pt  dqn_ep_200.pt  dqn_ep_2000.pt  dqn_ep_2200.pt  dqn_ep_2600.pt  dqn_ep_3000.pt  dqn_ep_450.pt  dqn_ep_600.pt  dqn_ep_700.pt  dqn_ep_800.pt  dqn_ep_900.pt  dqn_final.pt
rl/tmp_runs/: dqn_best.pt  dqn_ep_1.pt  dqn_final.pt
rl_bridge/: main.cpp
rl_double_dqn/: README.md  dqn_agent.py  evaluate.py  replay.py  train.py
rl_double_dqn/runs/: dqn_best.pt  dqn_ep_100.pt  dqn_ep_1000.pt  dqn_ep_150.pt  dqn_ep_200.pt  dqn_ep_250.pt  dqn_ep_300.pt  dqn_ep_350.pt  dqn_ep_400.pt  dqn_ep_450.pt  dqn_ep_50.pt  dqn_ep_500.pt  dqn_ep_550.pt  dqn_ep_600.pt  dqn_ep_650.pt  dqn_ep_700.pt  dqn_ep_750.pt  dqn_ep_800.pt  dqn_ep_850.pt  dqn_ep_900.pt  dqn_ep_950.pt  dqn_final.pt  metrics.csv
rl_dqn/: env_wrapper.py  evaluate.py  replay_buffer.py  train.py
rl_dqn/runs/: dqn_best.pt  dqn_ep_1.pt  dqn_ep_100.pt  dqn_ep_1000.pt  dqn_ep_1100.pt  dqn_ep_1200.pt  dqn_ep_125.pt  dqn_ep_150.pt  dqn_ep_1600.pt  dqn_ep_175.pt  dqn_ep_2.pt  dqn_ep_200.pt  dqn_ep_2100.pt  dqn_ep_225.pt  dqn_ep_2300.pt  dqn_ep_2400.pt  dqn_ep_25.pt  dqn_ep_250.pt  dqn_ep_2500.pt  (+22 more)
(+1 files in other folders)
